<resources>
    <string name="app_name">Test Paper</string>
    <string name="fo_login">Login</string>
    <string name="fo_hint_email">Email Anda</string>
    <string name="fo_hint_password">Password Anda</string>
    <string name="fo_forgot_password">Lupa Password ?</string>
    <string name="fo_masuk">Masuk</string>
    <string name="fo_description_button_close">Delete Item</string>
    <string name="fo_description_button_edit">Modify Item</string>
    <string name="fo_description_image_profile">Profile Contact</string>
</resources>