<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/fo_login" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fo_hint_email"
        android:layout_marginHorizontal="18dp"
        app:boxBackgroundColor="@color/fo_transparent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fo_hint_password"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/fo_transparent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/BodyMediumLightBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="18dp"
        android:text="@string/fo_forgot_password"
        android:textAlignment="textEnd"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/fo_masuk"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>