<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/contact_profile"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:contentDescription="@string/fo_description_image_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/fo_ic_menu_account" />

        <TextView
            android:id="@+id/contact_name"
            style="@style/BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintStart_toEndOf="@+id/contact_profile"
            app:layout_constraintTop_toTopOf="@+id/contact_profile"
            tools:text="CS Telkomsel" />

        <TextView
            android:id="@+id/contact_number"
            style="@style/LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/contact_profile"
            app:layout_constraintStart_toStartOf="@+id/contact_name"
            tools:text="081293551227" />

        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/fo_outline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/fo_description_button_edit"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/fo_description_button_close"
            android:src="@drawable/fo_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fo_light_grey"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>